fixed soft reject about SCROLLING ANIMATIONS and SPACING AND ALIGNMENT

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -423,10 +423,11 @@ a:focus {
 
 .carousel-control .fa {
     position: absolute;
-    top: 45%;
+    top: 50%;
     width: 30px;
     height: 40px;
     font-size: 40px;
+    transform: translateY(-50%);
 }
 
 .carousel-inner .item {
@@ -438,7 +439,7 @@ a:focus {
 
 .carousel-caption {
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-50%); 
     margin: 0;
     bottom: auto;
     text-shadow: none;
@@ -457,8 +458,8 @@ a:focus {
 }
 
 .item_name {
-    font-size: 54px;
-    line-height: 78px;
+    font-size: 50px;
+    line-height: 75px;
     position: relative;
     padding-bottom: 10px;
     margin-bottom: 15px;
@@ -487,17 +488,18 @@ a:focus {
 }
 
 .item_img img {
-    width: 389px;
-    height: 237px;
+    width: 460px;
+    height: 300px;
     max-width: 100%;
 }
 
 .item_badge {
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     position: absolute;
     right: 0;
-    bottom: 0;
+    top: 50%;
+    transform: translateY(-50%);
     background-color: #f6a525;
     color: #fff;
     border-radius: 50%;
@@ -539,13 +541,13 @@ a:focus {
 .badge_btext {
     display: block;
     font-family: 'Montserrat-Bold';
-    font-size: 38px;
+    font-size: 32px;
     flex: 1 100%;
 }
 
 .badge_stext {
     font-family: 'Montserrat-Light';
-    font-size: 24px;
+    font-size: 18px;
     margin-top: -8px;
     flex: 2 100%;
 }
@@ -629,10 +631,6 @@ a:focus {
 ==========================================
 /*----------------------------------------*/
 
-.section {
-    padding-top: 30px;
-}
-
 .section-title {
     font-size: 34px;
     text-transform: uppercase;
@@ -640,6 +638,7 @@ a:focus {
     position: relative;
     margin-bottom: 30px;
     color: #990100;
+    margin: 0 0 20px;
 }
 
 .title_sty1 {
@@ -654,7 +653,6 @@ a:focus {
     max-width: 600px;
     margin: auto;
     text-align: center;
-    margin-bottom: 40px;
 }
 
 .section-short {
@@ -677,7 +675,6 @@ a:focus {
     justify-content: center;   
 }
 #about_us {
-    padding-top: 60px;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -783,7 +780,7 @@ a:focus {
 
 #menu_items {
     height: 100%;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
 }
 
 .filter_item_img {
@@ -1314,7 +1311,7 @@ a:focus {
 
 /*----------------------------------------*/
 .pagination {
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .pagination>li>a,
 .pagination>li>span {
@@ -1338,6 +1335,7 @@ a:focus {
 }
 
 .pagination>li>a:hover,
+.pagination>li>a:focus,
 .pagination>li.active>a,
 .pagination>.active>a,
 .pagination>.active>a:focus,
@@ -1432,7 +1430,7 @@ a:focus {
     position: relative;
     overflow: hidden;
     padding-top: 0;
-    margin-top: 125px;
+    margin-top: 100px;
     background-color: #990100;
 }
 
@@ -1614,7 +1612,7 @@ a:focus {
 /*----------------------------------------*/
 
 #googleMap {
-    height: 577px;
+    height: 500px;
     margin-bottom: 180px;
 }
 
